tests/ui/feature-gates/feature-gate-inline_const_pat.rs
fn main() {
    let const { () } = ();
    //~^ ERROR inline-const in pattern position is experimental [E0658]
}
